brot2 (0.2) UNRELEASED; urgency=low

  * LP#783038: Replace deprecated calls to gtk_signal_connect(_object)
  * Makefile: Set USE_CCACHE=yes to have the obvious effect.

 -- Ross Younger <0ryoungerk.launchpad@coriolis.greenend.org.uk>  Thu, 19 May 2011 19:01:00 +0100

brot2 (0.1) natty; urgency=low

  * Initial packaging. (Closes: LP#783031)
  * Interim fix for assert on startup (LP#783106)
  * Update version ident, add "-v" option (Closes: LP#783139)

 -- Ross Younger <0ryoungerk.launchpad@coriolis.greenend.org.uk>  Sun, 15 May 2011 21:06:56 +0100